--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ foreach (FLEX_TEST_SOURCE_FILE ${FLEX_TEST_SOURCES})
 	set(FLEX_TEST_EXE_NAME flex_test_${FLEX_TEST_FILENAME})
 
 	add_executable(${FLEX_TEST_EXE_NAME} ${FLEX_TEST_SOURCE_FILE})
-	set_property(TARGET ${FLEX_TEST_EXE_NAME} PROPERTY CXX_STANDARD ${FIPPER_CPP_DIALECT})
+	set_property(TARGET ${FLEX_TEST_EXE_NAME} PROPERTY CXX_STANDARD ${FLEX_CPP_DIALECT})
 
 	target_link_libraries(${FLEX_TEST_EXE_NAME} PRIVATE flex::flex Catch2::Catch2WithMain)
 
