--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(flex
 )
 
 # config
-set(FIPPER_CPP_DIALECT 23)
+set(FLEX_CPP_DIALECT 23)
 
 if (${PROJECT_IS_TOP_LEVEL})
 	set(FLEX_DEFAULT_BUILD_TESTS On)
@@ -18,6 +18,7 @@ endif()
 # options
 option(FLEX_BUILD_TESTS "FLEX_BUILD_TESTS" ${FLEX_DEFAULT_BUILD_TESTS})
 set(FLEX_REFLECTION_MAX_MEMBERS_COUNT 128)
+set(FLEX_MACROS_MAX_VAR_TO_SEQ_COUNT 128)
 
 
 # subdirectories
