Add enum -> string_view conversion and enum iteration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ endif()
 option(FLEX_BUILD_TESTS "FLEX_BUILD_TESTS" ${FLEX_DEFAULT_BUILD_TESTS})
 set(FLEX_REFLECTION_MAX_MEMBERS_COUNT 128)
 set(FLEX_MACROS_MAX_VAR_TO_SEQ_COUNT 128)
+set(FLEX_REFLECTION_MAX_ENUM_SIZE 32)
 
 
 # subdirectories
