--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -51,6 +51,7 @@ target_compile_definitions(flex_lib PUBLIC
 	FLEX_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
 	FLEX_VERSION_MINOR=${PROJECT_VERSION_MINOR}
 	FLEX_VERSION_PATCH=${PROJECT_VERSION_PATCH}
+	FLEX_REFLECTION_MAX_ENUM_SIZE=${FLEX_REFLECTION_MAX_ENUM_SIZE}
 )
 
 target_include_directories(flex_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${FLEX_LIBRARY_AUTOGEN_INCLUDE_DIR})
